Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12685

ll_statahead_threda has incorrect error handling code

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • None
    • 3
    • 9223372036854775807

      Commit ae828cd3b092 ("LU-4684 llite: add lock for dir layout data") for

      https://review.whamcloud.com/#/c/32946/

      changed how op_data was allocated, with consequence that failure is reported as NULL rarther than ERR_PTR(-ENOMEM).  The error handling code was not updated to match.

      So a memory allocation failure will cause a NULL pointer dereference.

            wc-triage WC Triage
            neilb Neil Brown (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: